# VPN-Rust

./: .beacon-framework.toml  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cleanup_vpn.sh  client.ovpn  config.example.toml  gen_certs.sh
.beacon/: session.ps1  session.sh
.cursor/: rules
.github/workflows/: ci.yml  release.yml
certs/: server.crt  server.key
docs/: CLAUDE.md  PLANNING.md  PRD.md  QUICKSTART.md  TASKS.md
docs/architecture/: ARCHITECTURE.md
docs/compliance/: COMPLIANCE_MATRIX.md  DATA_GOVERNANCE.md  VULNERABILITY_POLICY.md
docs/design/: README.md
docs/governance/: LLM_BOUNDARIES.md  PROMPT_SAFETY.md  RULESET.md  SESSION_PROTOCOL.md  classification-footers.md
docs/governance/rules/: rust.md
docs/operations/: CHANGE_MANAGEMENT.md  INCIDENT_RESPONSE.md  MONITORING.md  SECURITY_MODEL.md  THREAT_MODEL.md
docs/planning/: BACKLOG.md  EXECUTION_PLAN.md
docs/process/: ESCALATION_POLICY.md  FEATURE_LIFECYCLE.md  HANDOFF_CONTRACT.md  RELEASE_PROCESS.md
docs/product/: CAPABILITIES.md  GLOSSARY.md  PRD.md  USE_CASES.md
docs/reports/: README.md
docs/requirements/: README.md
docs/standards/: API_CONTRACT.md  BUILD_AND_TEST.md  CONVENTIONS.md  DEFINITION_OF_DONE.md  DEPENDENCIES.md  DEPLOYMENT.md  PERFORMANCE_BUDGET.md  SCHEMA_CHANGE_POLICY.md  VERSIONING.md  WIRE_PROTOCOL.md
docs/state/: CHANGELOG.md  DECISIONS.md  HANDOFF.md  OPEN_QUESTIONS.md  RISKS.md  STATUS.md
examples/: echo_client.rs  echo_server.rs
packaging/: README.md
packaging/systemd/: README.md  vpn-rust-server.service
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs  metrics.rs
src/config/: error.rs  mod.rs  ovpn.rs  toml_config.rs
src/crypto/: identity.rs  mod.rs
src/engine/: mod.rs  stats.rs
src/net/: clients.rs  device.rs  mod.rs  netcfg.rs  route.rs  security.rs  tls.rs  tun.rs
src/transport/: control.rs  mod.rs  quic.rs
src/tui/: app.rs  logbuf.rs  mod.rs  runner.rs  ui.rs
tests/: control_handshake.rs  quic_echo.rs
