[package]
name = "vpn-rust"
version = "0.1.0"
edition = "2021"
default-run = "vpn-rust"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ratatui = "0.25.0"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustls = "0.21"
webpki-roots = "0.22.6"
x509-parser = "0.16"
tun = "0.6"
anyhow = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"

# --- M1: QUIC transport (quinn pulls its own rustls 0.23; coexists with the
# legacy rustls 0.21 stack above until the TLS-over-TCP path is removed) ---
quinn = "0.11"
rcgen = "0.13"
bytes = "1"
postcard = { version = "1", features = ["use-std"] }
# Cross-platform async TUN (Linux / macOS utun / Windows wintun) — replaces the
# legacy Linux-only tun 0.6 + AsyncFd path (decision D-12).
tun-rs = { version = "2", features = ["async"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["iphlpapi"] }

[dev-dependencies]
tokio-test = "0.4.4"
