[package]
name = "vpn-rust"
version = "0.1.0"
edition = "2021"
default-run = "vpn-rust"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
ratatui = "0.25.0"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# QUIC transport + crypto
quinn = "0.11"
rcgen = "0.13"
bytes = "1"
postcard = { version = "1", features = ["use-std"] }
# Cross-platform async TUN (Linux / macOS utun / Windows wintun), decision D-12.
tun-rs = { version = "2", features = ["async"] }
# Security hardening (M3): key zeroization + certificate fingerprints.
zeroize = "1"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4.4"
